--- a/app/assets/stylesheets/new-age.css
+++ b/app/assets/stylesheets/new-age.css
@@ -118,9 +118,9 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("bg-pattern.png"), #7b4397;
-  background: url("bg-pattern.png"), -webkit-linear-gradient(to left, #969492,#060606);
-  background: url("bg-pattern.png"), linear-gradient(to left, #969492,#060606); }
+  background: asset-data-url("bg-pattern.png"), #7b4397;
+  background: asset-data-url("bg-pattern.png"), -webkit-linear-gradient(to left, #969492,#060606);
+  background: asset-data-url("bg-pattern.png"), linear-gradient(to left, #969492,#060606); }
   header.masthead .header-content {
     max-width: 500px;
     margin-bottom: 100px;
@@ -204,7 +204,7 @@ section.features .feature-item {
 section.cta {
   position: relative;
   padding: 250px 0;
-  background-image: url("bg-cta.jpg");
+  background-image: asset-data-url("bg-cta.jpg");
   background-position: center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
